--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
-
+import pandas as pd
+import matplotlib.pyplot as plt
+import seaborn as sns
+import streamlit as st
+from datetime import date, datetime, timedelta
+from babel.numbers import format_currency
