--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pandas==2.2.1
-import matplotlib.pyplot as plt
-import seaborn as sns
-import streamlit as st
-from datetime import date, datetime, timedelta
-from babel.numbers import format_currency
+matplotlib.pyplot==3.8.3
+seaborn==0.13.2
+streamlit==1.31.1
+datetime==5.4
+babel==2.14.0
